# vortex-enclave-mcp-server

./: .gitignore  LICENSE  README.md
bridge/: README.md  index.js  package.json
helpers/ingest-cli/: README.md  pyproject.toml
helpers/ingest-cli/src/vortex_ingest_cli/: __init__.py  __main__.py  parsers.py  walker.py
python/: README.md  pyproject.toml
python/src/vortex_enclave/: __init__.py  client.py  constants.py  embedders.py  errors.py  types.py
typescript/: README.md  package.json  tsconfig.json
typescript/src/: index.ts
