[project]
name = "vortex-enclave"
version = "0.1.0"
description = "Native Python client for Vortex Enclave — sovereign vector search and agent memory"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Frank Nguyen", email = "frank.quy.nguyen@gmail.com" }]
readme = "README.md"
keywords = [
    "vortex-enclave",
    "vector-search",
    "rag",
    "agent-memory",
    "mcp",
    "embeddings",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://fusionlab.ai"
Repository = "https://github.com/feepfoop/vortex-enclave-mcp-server"
Issues = "https://github.com/feepfoop/vortex-enclave-mcp-server/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]
mxbai = [
    "sentence-transformers>=3.0",
    "torch>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vortex_enclave"]
